# Blogger-Application

./: .env  README.md  app.py  auth.py  blog.py  comment.py  config.py  models.py  pyproject.toml
dsa_solutions/: longest_consecutive.py  majority_element.py
instance/: database.db
migrations/versions/: c7f4fa271cc8_migration.py
templates/: index.html  post.html  signup.html  single_post.html
